Modified for use as an example

--- a/output/tag_index/index.html
+++ b/output/tag_index/index.html
@@ -2,22 +2,21 @@
 <head>
   <meta charset='utf-8'>
   <title>
-    GCS Notes
+    Nanoc Blog
   </title>
   <link href='/stylesheet.css' rel='stylesheet'>
 </head>
 <body>
   <div id='banner'>
-    Craig's GCS Notes
+    Simple Nanoc Blog
   </div>
   <div id='main'>
     <h1>Tags</h1>
     <ul>
-      <li><a href="/tags/git">git</a></li>
-      <li><a href="/tags/gitlab">gitlab</a></li>
-      <li><a href="/tags/nanoc">nanoc</a></li>
-      <li><a href="/tags/retention_gaming">retention_gaming</a></li>
-      <li><a href="/tags/vm_guest">vm_guest</a></li>
+      <li><a href="/tags/colors">colors</a></li>
+      <li><a href="/tags/favorites">favorites</a></li>
+      <li><a href="/tags/planets">planets</a></li>
+      <li><a href="/tags/words">words</a></li>
     </ul>
   </div>
   <div id='sidebar'>
