--- a/content/index.html
+++ b/content/index.html
@@ -2,8 +2,10 @@
 title: Home
 ---
 
-<h2>Craig's GCS Brain on Nanoc</h2>
-<p>
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-</p>
-
+<h2>Simple Nanoc Blog 2014-12-22</h2>
+<h3>Goals</h3>
+<ul>
+  <li>Uses blogging helper</li>
+  <li>Post index page with posts sorted by date desc.</li>
+  <li>Tag index page with tags sorted alphabetically</li>
+</ul>
