Attempt to merge in latest craig nanoc_blog

--- a/content/index.html
+++ b/content/index.html
@@ -2,10 +2,7 @@
 title: Home
 ---
 
-<h2>Simple Nanoc Blog 2014-12-22</h2>
-<h3>Goals</h3>
-<ul>
-  <li>Uses blogging helper</li>
-  <li>Post index page with posts sorted by date desc.</li>
-  <li>Tag index page with tags sorted alphabetically</li>
-</ul>
+<h2>All My Notes are Belong to Me</h2>
+<p>
+Try to remember
+</p>
